--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ import org.jetbrains.intellij.platform.gradle.tasks.VerifyPluginTask
 plugins {
     id 'java'
     id 'org.jetbrains.intellij.platform' version '2.0.1'
-    id 'org.jetbrains.kotlin.jvm' version '2.1.20'
+    id 'org.jetbrains.kotlin.jvm' version '2.1.21'
 }
 
 def hasLocalProperties = provider {
@@ -35,22 +35,25 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains:annotations:26.0.2'
-    implementation 'org.json:json:20250107'
-    implementation 'org.apache.maven:maven-artifact:3.9.9'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.12.1'
+    implementation 'org.json:json:20250517'
+    implementation 'org.apache.maven:maven-artifact:3.9.10'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.13.1'
     testCompileOnly 'junit:junit:4.13.2'
-    testCompileOnly 'org.junit.jupiter:junit-jupiter:5.12.1'
+    testCompileOnly 'org.junit.jupiter:junit-jupiter:5.13.1'
 
     intellijPlatform {
         String type = project.findProperty('platformType')
         String version = project.findProperty('platformVersion')
         create(type, version)
 
-        bundledPlugins(['com.intellij.java', 'NodeJS', 'org.jetbrains.plugins.textmate'
-//                        , 'com.redhat.devtools.lsp4ij'
+        bundledPlugins([
+                'com.intellij.java',
+                'NodeJS',
+                'JavaScript',
+                'org.jetbrains.plugins.textmate'
         ])
 
-        plugin("com.redhat.devtools.lsp4ij:0.12.0")
+        plugin("com.redhat.devtools.lsp4ij:0.14.0")
 
         instrumentationTools()
         pluginVerifier()
@@ -114,7 +117,7 @@ tasks {
     patchPluginXml {
         version = project.findProperty('pluginVersion')
         sinceBuild = project.findProperty('pluginSinceBuild')
-        untilBuild = project.findProperty('pluginUntilBuild')
+        untilBuild = provider { null }
     }
 
     buildPlugin {
