--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -108,7 +108,16 @@ The set of features will grow with future releases, aligned with the development
     <change-notes><![CDATA[
 <h3>Changed</h3>
 <ul>
-    <li>Suitable Node.js interpreter is now found at first plugin start</li>
-    <li>Improved UX when setting Node.js interpreter path manually</li>
-</ul> ]]></change-notes>
+    <li>Remove upper version limit for IDE platform</li>
+</ul>
+<h3>Fixed</h3>
+<ul>
+    <li>via LSP4IJ 0.14.0:
+        <ul>
+            <li>Various bug fixes</li>
+            <li>Performance and stability improvements</li>
+        </ul>
+    </li>
+</ul>
+]]></change-notes>
 </idea-plugin>
