--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -108,7 +108,30 @@ The set of features will grow with future releases, aligned with the development
     <change-notes><![CDATA[
 <h3>Changed</h3>
 <ul>
-    <li>Suitable Node.js interpreter is now found at first plugin start</li>
-    <li>Improved UX when setting Node.js interpreter path manually</li>
-</ul> ]]></change-notes>
+    <li>Remove upper version limit for IDE platform</li>
+    <li>include @sap/cds-lsp 9.0.1 with the following changes since 8.9.0:
+        <ul>
+            <li>Add support for Node.js 24</li>
+            <li>Add formatting option `boolOpsAtLineEnd` to position `and`, `or` operators at line end</li>
+            <li>Hovering over errors shows explanation for many error types</li>
+            <li>Hovering over built-in types shows documentation</li>
+            <li>Where-used functionality now based on new index</li>
+            <li>More compact formatting of `case` statements</li>
+            <li>Fix separate alignment of annotations to entity and select items</li>
+            <li>Fix highlighting of parenthesized annotations with strings containing a colon</li>
+            <li>Fix highlighting of comments in queries</li>
+            <li>Fix formatting of annotations in parentheses with values containing spaces</li>
+        </ul>
+    </li>
+</ul>
+<h3>Fixed</h3>
+<ul>
+    <li>via LSP4IJ 0.14.0:
+        <ul>
+            <li>Various bug fixes</li>
+            <li>Performance and stability improvements</li>
+        </ul>
+    </li>
+</ul>
+]]></change-notes>
 </idea-plugin>
