--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ pluginVersion = 2.0.0-rc1
 pluginSinceBuild = 242
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IU
+platformType = IC
 platformVersion = 2024.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
