--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -106,9 +106,13 @@ The set of features will grow with future releases, aligned with the development
 
 
     <change-notes><![CDATA[
+<h3>Changed</h3>
+<ul>
+    <li>Update to latest <i>lsp4ij</i> version 0.14.2
+</ul>
 <h3>Fixed</h3>
 <ul>
-    <li>To run smoothly on IDEA Community Edition, the plugin now treats the <i>NodeJS</i> plugin dependency as optional (which is not bundled in that edition). Thus, if a suitable Node.js version is not in PATH, the plugin no longer tries to find a registered interpreter in IDEA Community.
+    <li>Build on IC platform type
 </ul>
 ]]></change-notes>
 </idea-plugin>
