--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -106,33 +106,42 @@ The set of features will grow with future releases, aligned with the development
 
 
     <change-notes><![CDATA[
+<h2>Changes since version 1.6.0
 <h3>Added</h3>
 <ul>
-    <li>User setting for additional environment variables for the CDS Language Server
+    <li>Support for <i>Community Editions</i> of IntelliJ IDEs
+    <li>User settings:
+        <ul>
+            <li>Node.js interpreter path (to modify result of automatic search)
+            <li>Additional environment variables for CDS Language Server
+        </ul>
+    </li>
+    <li>IDE features unlocked via lsp4ij 0.14.2:
+    <ul>
+        <li>Code Vision (displays context info such as usages)
+        <li>Highlight Usages in File (highlights symbol usages)
+        <li>Structure Tool Window (populates and updates the file structure panel)
+        <li>On-the-fly Code Formatting (code formatting as you type)
+        <li>Selection-based Code Formatting (formatting of only a selected block of code)
+        <li>Semantic Selection (extends or shrinks selection based on code structure)
+        <li>File Rename Synchronization (synchronizes the language server with file renames)
+        <li>Global Symbol Search (navigation to a workspace symbol)
+        <li>Safe Rename Refactoring (updates references on file rename)
+    </ul>
 </ul>
 <h3>Changed</h3>
 <ul>
-    <li>Update to latest <i>lsp4ij</i> version 0.14.2
-    <li>Include @sap/cds-lsp 9.1.0 with the following changes since 9.0.1:
-        <ul>
-            <li>Performance/Responsiveness:
-                <ul>
-                  <li>Reduce "lagging red underline" while typing - configurable via user setting cds.workspace.fastDiagnosticsMode
-                  <li>Outdated compilations in background are aborted fast. This increases responsiveness and reduces CPU usage and is especially useful for large projects with many files.
-                </ul>
-            </li>
-            <li>Formatter: New option argsInNewLine to put multiple arguments to e.g. function calls on a new line
-            <li>Formatter: Chained method-like function calls are now broken into separate lines
-            <li>fix: Formatter: Original empty lines are now correctly preserved before single-lined blocks
-            <li>fix: Formatter: Separate alignment of annotations before resp. within projection-like entities
-        </ul>
-    </li>
-</ul>
-<h3>Fixed</h3>
-<ul>
-    <li>Optimized server settings to improve editing performance (e.g. 2 orders of magnitude for initial Code Completion in a large repo)
-    <li>Improve UX and validation of CDS settings
-    <li>Build on IC platform type for consistency
+    <li>Already search suitable Node.js interpreter on first plugin start
 </ul>
 ]]></change-notes>
 </idea-plugin>
+
+
+
+
+
+
+
+
+
+
