--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -114,12 +114,12 @@ The set of features will grow with future releases, aligned with the development
 <h3>Added</h3>
 <ul>
     <li>Support for <i>Community Editions</i> of IntelliJ IDEs
-        <br/>(The plugin is now based on the <i>LSP4IJ</i> plugin, which therefor gets installed in addition)
+        <br/>(The plugin is now based on the <i>LSP4IJ</i> plugin, which therefore gets installed in addition.)
     <li>IDE features unlocked via LSP4IJ 0.14.2:
     <ul>
         <li>Highlight Usages in File (highlights symbol usages)
         <li>Structure Tool Window (populates and updates the file structure panel)
-        <li>Navigate Symbol... (find/list symbols in workspace)</li>
+        <li>Go to Symbol (find/list symbols in workspace)</li>
         <li>On-the-fly Code Formatting (format block when finishing it with <code>}</code> or <code>;</code>)
         <li>Format Selected Code
     </ul>
