--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -110,7 +110,7 @@ The set of features will grow with future releases, aligned with the development
 
 
     <change-notes><![CDATA[
-<h2>Changes since version 1.6.0
+<h2>Changes since version 1.6.0</h2>
 <h3>Added</h3>
 <ul>
     <li>Support for <i>Community Editions</i> of IntelliJ IDEs
@@ -134,6 +134,17 @@ The set of features will grow with future releases, aligned with the development
 <h3>Changed</h3>
 <ul>
     <li>Search suitable Node.js interpreter on first start of plugin
+    <li>include @sap/cds-lsp 9.1.2 with the following changes since 9.1.0:
+        <ul>
+            <li>Formatting:
+                <ul>
+                    <li>Added options `whitespaceBeforeColonInParamList` and `whitespaceAfterColonInParamList` to control whitespace around colons in parameter lists
+                    <li>fix: Colons in type paths are no longer aligned with other colons, nor are they padded with spaces
+                </ul>
+            </li>
+            <li>Maximum log-file size can now be increased to at most 1 GB (default limit unchanged at 10 MB)
+        </ul>
+    </li>
 </ul>
 ]]></change-notes>
 </idea-plugin>
