--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,6 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: ./.github/actions/prepare-cds-lsp-local
+        with:
+          gh_pat: ${{ secrets.GH_PAT_READ_PUBLIC_REPOS }}
+
       - uses: ./.github/actions/gradle-run
         with:
           steps: |-
