--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -56,6 +56,10 @@ The set of features will grow with future releases, aligned with the development
 
         <applicationService
                 serviceImplementation="com.sap.cap.cds.intellij.settings.AppSettings"/>
+        <projectService
+                serviceImplementation="com.sap.cap.cds.intellij.usersettings.CdsUserSettings"/>
+        <projectService
+                serviceImplementation="com.sap.cap.cds.intellij.usersettings.CdsUserSettingsService"/>
         <applicationConfigurable
                 parentId="language"
                 instance="com.sap.cap.cds.intellij.settings.AppSettingsConfigurable"
