--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -62,9 +62,14 @@ The set of features will grow with future releases, aligned with the development
                 serviceImplementation="com.sap.cap.cds.intellij.usersettings.CdsUserSettingsService"/>
         <applicationConfigurable
                 parentId="language"
-                instance="com.sap.cap.cds.intellij.settings.AppSettingsConfigurable"
                 id="com.sap.cap.cds.intellij.settings.AppSettingsConfigurable"
+                instance="com.sap.cap.cds.intellij.settings.AppSettingsConfigurable"
                 displayName="CDS"/>
+        <projectConfigurable
+                parentId="com.sap.cap.cds.intellij.settings.AppSettingsConfigurable"
+                id="com.sap.cap.cds.intellij.usersettings.CdsUserSettingsConfigurable"
+                instance="com.sap.cap.cds.intellij.usersettings.CdsUserSettingsConfigurable"
+                displayName="Language Server"/>
 
     </extensions>
 
